2008-08-03  Ania Pawelczyk  <aniap@users.sourceforge.net>

	* test/cmds.test:  Update to tcltest2
	* test/dialog.test:  Update to tcltest2
	* test/get.test:  Update to tcltest2
	* test/text.test:  Update to tcltest2; report: 33.11 fails

2008-08-01  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/tkWinWm.c: Check wmPtr is valid in TopLevelReqProc
	* test/wm.test:  to fix [Bug 2028703]

2008-07-31  Don Porter  <dgp@users.sourceforge.net>

	* generic/tk.h: Added missing EXTERN for the Tcl_PkgInitStubsCheck
	declaration to fix inability to embed non-stub-enabled Tk on Windows.

2008-07-26  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* doc/options.n: Direct to the font manual for -font [Bug 1686012]

	* tests/constraints.tcl: Add a nonwin contraint.
	* tests/listbox.test:    Conform to testing policy. [Bug 2024753]

	* win/tkWinWm.c: Check that the parent has been mapped before
	* tests/wm.test: calling RemapWindows. [Bug 2009788]

	* win/tkWinWindow.c: Check for 0x prefix in sprintf %p. Bug [2026405]

2007-02-24  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/*.c: fix [2021443] inconsistant "wrong # args" messages
	* macosx/tkMacOSXSend.c
	* macosx/tkMacOSXWm.c
	* unix/tkUnixSend.c
	* unix/tkUnixWm.c
	* tests/*.test

2008-07-22  Daniel Steffen  <das@users.sourceforge.net>

	* library/ttk/aquaTheme.tcl: Use system color names and TIP145 named
	font instead of hardcoded color values and deprecated native font name.

	* macosx/tkMacOSXHLEvents.c: factor out common code; formatting.

2008-07-08  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* doc/*.n: Fixed broken line endings from last doc commit.

2008-07-04  Joe English  <jenglish@users.sourceforge.net>

	* generic/ttk/ttkDefaultTheme.c, generic/ttk/ttkClamTheme.c,
	generic/ttk/ttkClassicTheme.c, generic/ttk/ttkElements.c: Audit:
	ensure that output arguments to Tk_Get*FromObj() are initialized, in
	case of erroneous style specifications. [Bug 2009213]

2008-07-02  Donal K. Fellows  <dkf@users.sf.net>
